Download URL fix

--- a/jboss-as-7.1.1-centos/Dockerfile
+++ b/jboss-as-7.1.1-centos/Dockerfile
@@ -3,8 +3,8 @@ FROM davimss/docker-jdk:8
 ENV JBOSS_VERSION jboss-as-7.1.1.Final
 ENV JBOSS_HOME /opt/$JBOSS_VERSION
 ENV PATH $JBOSS_HOME/bin:$PATH
-ENV JBOSS_DOWN_FILE $JBOSS_VERSION.zip
-ENV JBOSS_BASE_DOWNLOAD_URL https://www.dropbox.com/s/jm98r1u7dktz7yu
+ENV JBOSS_DOWN_FILE $JBOSS_VERSION.tar.gz
+ENV JBOSS_BASE_DOWNLOAD_URL https://www.dropbox.com/s/223edmwexm72x6u
 ENV JBOSS_DOWNLOAD_URL ${JBOSS_BASE_DOWNLOAD_URL}/${JBOSS_DOWN_FILE}?dl=1
 ENV JBOSS_DEPLOY_DIR ${JBOSS_HOME}/standalone/deployments
 ENV JBOSS_CONFIG_DIR ${JBOSS_HOME}/standalone/configuration
